패스워드 분리, 메일 세팅 중